--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cXS-uy-K0n">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cXS-uy-K0n">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -317,6 +317,13 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tqx-tQ-4gh">
+                                <rect key="frame" x="112" y="430" width="96" height="30"/>
+                                <state key="normal" title="Set as Default"/>
+                                <connections>
+                                    <action selector="saveDefaults" destination="sKY-0b-GtB" eventType="touchUpInside" id="0ju-9M-y08"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <color key="tintColor" name="Tint Color"/>
@@ -326,6 +333,7 @@
                             <constraint firstItem="JeS-dG-0bW" firstAttribute="height" secondItem="7J2-20-QTO" secondAttribute="height" constant="40" id="4Pn-Cn-zbK"/>
                             <constraint firstItem="JeS-dG-0bW" firstAttribute="centerX" secondItem="7J2-20-QTO" secondAttribute="leading" id="6kI-r7-zUb"/>
                             <constraint firstItem="oK2-1w-g1j" firstAttribute="width" secondItem="cey-fv-2gg" secondAttribute="width" id="9IW-3R-DB6"/>
+                            <constraint firstItem="tqx-tQ-4gh" firstAttribute="centerX" secondItem="IL7-SC-53c" secondAttribute="centerX" id="CwW-nZ-VyM"/>
                             <constraint firstItem="cey-fv-2gg" firstAttribute="top" secondItem="jgb-pc-X2x" secondAttribute="bottom" constant="20" id="Hpw-fM-An3"/>
                             <constraint firstItem="JeS-dG-0bW" firstAttribute="top" secondItem="7J2-20-QTO" secondAttribute="top" id="Jx2-SJ-QOX"/>
                             <constraint firstItem="bwd-bB-yIj" firstAttribute="width" secondItem="cey-fv-2gg" secondAttribute="width" id="PP8-lx-XkK"/>
@@ -336,6 +344,7 @@
                             <constraint firstItem="x4N-WC-9YE" firstAttribute="centerX" secondItem="7J2-20-QTO" secondAttribute="leading" constant="280" id="e4Q-it-uoL"/>
                             <constraint firstItem="bwd-bB-yIj" firstAttribute="top" secondItem="cey-fv-2gg" secondAttribute="bottom" constant="20" id="ikZ-xc-x2k"/>
                             <constraint firstAttribute="trailing" secondItem="cey-fv-2gg" secondAttribute="trailing" constant="20" symbolic="YES" id="o7e-3e-u51"/>
+                            <constraint firstItem="tqx-tQ-4gh" firstAttribute="top" secondItem="2ZM-zS-YH1" secondAttribute="bottom" constant="20" id="oj7-Yg-Ukn"/>
                             <constraint firstItem="oK2-1w-g1j" firstAttribute="top" secondItem="tyO-e7-KqD" secondAttribute="bottom" constant="8" symbolic="YES" id="prU-VX-lhg"/>
                             <constraint firstItem="cey-fv-2gg" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="leading" constant="20" symbolic="YES" id="uIX-pJ-UfC"/>
                             <constraint firstItem="bwd-bB-yIj" firstAttribute="centerX" secondItem="cey-fv-2gg" secondAttribute="centerX" id="yDD-1m-MVR"/>
