Fix WelcomeViewController never being presented. Fix the Continue button not dismissing WelcomeViewController.

--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -707,6 +707,9 @@
                                                 <integer key="value" value="7"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="dismiss" destination="yJj-Fp-u2s" eventType="touchUpInside" id="2DJ-Ea-AC3"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
