--- a/Resources/Launch Screen.storyboard
+++ b/Resources/Launch Screen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14865.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,38 +15,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Background" translatesAutoresizingMaskIntoConstraints="NO" id="jWD-Md-Yfb" userLabel="Background">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568.00000000000011"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Logo" translatesAutoresizingMaskIntoConstraints="NO" id="gUh-ii-bJs" userLabel="Logo">
-                                <rect key="frame" x="53.5" y="67" width="213" height="44.5"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-LogoGlow" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-Ha-dHo" userLabel="Logo">
+                                <rect key="frame" x="0.0" y="122" width="320" height="320"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="gUh-ii-bJs" secondAttribute="height" multiplier="115:24" id="7Gb-gV-JC0"/>
+                                    <constraint firstAttribute="width" secondItem="1j3-Ha-dHo" secondAttribute="height" multiplier="1:1" id="ElL-Rx-QcP"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Bee" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-Ha-dHo" userLabel="Bee">
-                                <rect key="frame" x="55" y="178" width="197.00000000000006" height="208"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Name" translatesAutoresizingMaskIntoConstraints="NO" id="gUh-ii-bJs" userLabel="Name">
+                                <rect key="frame" x="45" y="65" width="230" height="48"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="1j3-Ha-dHo" secondAttribute="height" multiplier="197:208" id="ElL-Rx-QcP"/>
+                                    <constraint firstAttribute="width" secondItem="gUh-ii-bJs" secondAttribute="height" multiplier="115:24" id="7Gb-gV-JC0"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-pixlwave" translatesAutoresizingMaskIntoConstraints="NO" id="Moi-Vx-IY8" userLabel="pixlwave">
                                 <rect key="frame" x="182" y="547" width="127" height="14"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Bee" translatesAutoresizingMaskIntoConstraints="NO" id="25f-Wj-RGF" userLabel="Bee">
+                                <rect key="frame" x="251" y="467" width="52" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="25f-Wj-RGF" secondAttribute="height" multiplier="13:16" id="cAV-54-0Ep"/>
+                                    <constraint firstAttribute="width" constant="52" id="xt5-Yx-RRN"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.63921568627450975" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="gUh-ii-bJs" firstAttribute="width" secondItem="jWD-Md-Yfb" secondAttribute="width" multiplier="2/3" id="9a0-95-7HV"/>
-                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" multiplier="0.96" id="AQT-4O-NBS"/>
-                            <constraint firstAttribute="trailing" secondItem="jWD-Md-Yfb" secondAttribute="trailing" id="Gwg-4E-mhf"/>
-                            <constraint firstAttribute="bottom" secondItem="jWD-Md-Yfb" secondAttribute="bottom" id="HcU-dZ-7VK"/>
+                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="AQT-4O-NBS"/>
+                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="ChF-nu-uLu"/>
+                            <constraint firstItem="Moi-Vx-IY8" firstAttribute="top" secondItem="25f-Wj-RGF" secondAttribute="bottom" constant="16" id="EQc-SH-duG"/>
+                            <constraint firstItem="25f-Wj-RGF" firstAttribute="trailing" secondItem="Moi-Vx-IY8" secondAttribute="trailing" constant="-6" id="KkL-Bs-cIh"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="Moi-Vx-IY8" secondAttribute="trailing" constant="11" id="Luc-2H-5c1"/>
-                            <constraint firstItem="jWD-Md-Yfb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="LwA-TV-sYF"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="leading" relation="lessThanOrEqual" secondItem="1j3-Ha-dHo" secondAttribute="leading" id="PFm-eU-ptc"/>
                             <constraint firstItem="gUh-ii-bJs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.314" id="QN0-al-Sxc"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="Moi-Vx-IY8" secondAttribute="bottom" constant="7" id="Uc2-iG-rbX"/>
-                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="196/320" constant="1" id="VMf-4K-MKj"/>
+                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" priority="750" id="VMf-4K-MKj"/>
                             <constraint firstItem="1j3-Ha-dHo" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.993" id="eh7-f7-yLu"/>
-                            <constraint firstAttribute="top" secondItem="jWD-Md-Yfb" secondAttribute="top" id="mpi-af-76Q"/>
+                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gUh-ii-bJs" secondAttribute="bottom" id="sR2-iQ-llW"/>
                             <constraint firstItem="gUh-ii-bJs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="u1t-ud-a0U"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
@@ -58,9 +62,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen-Background" width="320" height="694"/>
-        <image name="LaunchScreen-Bee" width="197" height="208"/>
-        <image name="LaunchScreen-Logo" width="230" height="48"/>
+        <image name="LaunchScreen-Bee" width="306" height="378"/>
+        <image name="LaunchScreen-LogoGlow" width="2214" height="2196"/>
+        <image name="LaunchScreen-Name" width="230" height="48"/>
         <image name="LaunchScreen-pixlwave" width="127" height="14"/>
     </resources>
 </document>
