--- a/Resources/Launch Screen.storyboard
+++ b/Resources/Launch Screen.storyboard
@@ -15,8 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-LogoGlow" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-Ha-dHo" userLabel="Logo">
-                                <rect key="frame" x="0.0" y="122" width="320" height="320"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen-Logo" translatesAutoresizingMaskIntoConstraints="NO" id="1j3-Ha-dHo" userLabel="Logo">
+                                <rect key="frame" x="70" y="192" width="180" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1j3-Ha-dHo" secondAttribute="height" multiplier="1:1" id="ElL-Rx-QcP"/>
                                 </constraints>
@@ -38,7 +38,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.63921568627450975" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="1j3-Ha-dHo" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="AQT-4O-NBS"/>
                             <constraint firstItem="1j3-Ha-dHo" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="ChF-nu-uLu"/>
@@ -48,9 +48,9 @@
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="leading" relation="lessThanOrEqual" secondItem="1j3-Ha-dHo" secondAttribute="leading" id="PFm-eU-ptc"/>
                             <constraint firstItem="gUh-ii-bJs" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.314" id="QN0-al-Sxc"/>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="Moi-Vx-IY8" secondAttribute="bottom" constant="7" id="Uc2-iG-rbX"/>
-                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" priority="750" id="VMf-4K-MKj"/>
+                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="9/16" priority="750" id="VMf-4K-MKj"/>
                             <constraint firstItem="1j3-Ha-dHo" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.993" id="eh7-f7-yLu"/>
-                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gUh-ii-bJs" secondAttribute="bottom" id="sR2-iQ-llW"/>
+                            <constraint firstItem="1j3-Ha-dHo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gUh-ii-bJs" secondAttribute="bottom" constant="75" id="sR2-iQ-llW"/>
                             <constraint firstItem="gUh-ii-bJs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="u1t-ud-a0U"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
@@ -63,8 +63,9 @@
     </scenes>
     <resources>
         <image name="LaunchScreen-Bee" width="306" height="378"/>
-        <image name="LaunchScreen-LogoGlow" width="2214" height="2196"/>
+        <image name="LaunchScreen-Logo" width="174" height="171"/>
         <image name="LaunchScreen-Name" width="230" height="48"/>
         <image name="LaunchScreen-pixlwave" width="127" height="14"/>
     </resources>
+    <color key="tintColor" name="Tint Color"/>
 </document>
